# DOHT

./: .gitignore  Dockerfile  LICENSE  Procfile  README  README.md  compose.yml  environment.yml  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tasks.py
.streamlit/: config.toml  secrets.toml
backend/: Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
backend/src/: FSL_prompt.py  chain.py  config.py  data_loader.py  database.py  llm.py  log_config.py  main.py  models.py  utils.py
backend/src/data/: example_prompt.txt  examples.json  prefix.txt  user_message.txt
dependencies/: environment.yml  requirements.in  requirements.txt
src/: FSL_prompt.py  agent.py  app.py  chain.py  config.py  custom_exceptions.py  data_loader.py  database.py  llm.py  log_config.py  models.py  server.py  start.py  utils.py
src/API/: FSL_prompt.py  agent.py  custom_exceptions.py  data_loader.py  database.py  llm.py  log_config.py  models.py  server.py
src/API/data/: example_prompt.txt  prefix.txt
src/UI/: app.py  login.py  style_loader.py
src/UI/pages/: database_login.py  query.py  query_executor.py
src/UI/styles/: UI.css  base.css  login.css  query.css
src/config/: server_config.py  ui_config.py
src/data/: example_prompt.txt  examples.json  prefix.txt  user_message.txt
src/styles/: UI.css
