[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "GROQ"
version = "0.0.1"
description = "GROQ (Get Rid of Queries) is designed to streamline database interactions by eliminating the need for technical, specifically SQL, background. It instantly transforms natural language questions into SQL queries, providing immediate access to accurate data without relying on SQL expertise. This solution significantly reduces response time and enhances data accessibility, ensuring both efficiency and data integrity."
authors = [
  { name = "Leo Tang" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.7"

[tool.flit.metadata]
module = "src"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["groq"]
force_sort_within_sections = true
