[metadata]
name = GROQ
version = 0.0.1
description = GROQ (Get Rid of Queries) is designed to streamline database interactions by eliminating the need for technical, specifically SQL, background. It instantly transforms natural language questions into SQL queries, providing immediate access to accurate data without relying on SQL expertise. This solution significantly reduces response time and enhances data accessibility, ensuring both efficiency and data integrity.
authors = Leo Tang
author_email = leotang.prof@gmail.com
license = MIT
license_files = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.11

[options]
packages = find:
package_dir = 
    = src

[egg_info]
egg_base = dependencies

[flake8]
ignore = E731,E266,E501,C901,W503
max-line-length = 99
exclude = .git
