[metadata]
name = DOHT
description = DOHT is a cutting-edge RAG (Retrieval-Augmented Generation) application designed to help users retrieve precise data effortlessly. Eliminating the need for technical expertise or SQL knowledge, DOHT allows users to ask natural-language questions and retrieve accurate information directly from databases.
authors = Leo Tang
author_email = leotang.prof@gmail.com
license = MIT
license_files = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.12

[options]
packages = find:
package_dir = 
    = src
include_package_data = True

[options.entry_points]
console_scripts =
    start-app = start:main
    start-server = start:start_backend
    start-client = start:start_frontend

[options.package_data]
* = *.txt, *.rst, *.md

[options.extras_require]
dev =
    flake8
    black
    pytest

[egg_info]
egg_base = ./

[flake8]
ignore = E731,E266,E501,C901,W503
max-line-length = 99
exclude = .git

[tool.setuptools_scm]
version_scheme = post-release
local_scheme = no-local-version
fallback_version = 0.1.0
